# OpenGL-CMake

./: .gitignore  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
src/: CMakeLists.txt  main.cc
src/const/: config.hh
